nject/tests/compile_fail/named_missing_provider.stderr
error[E0277]: the trait bound `nject::Named<Key<70248561524979824689990959946592054517>, String>: Injectable<'_, nject::Named<Key<70248561524979824689990959946592054517>, String>, EmptyProvider>` is not satisfied
  --> tests/compile_fail/named_missing_provider.rs:15:34
   |
15 |     let _svc: Service = provider.provide();
   |                                  ^^^^^^^ unsatisfied trait bound
   |
   = help: the trait `Injectable<'_, nject::Named<Key<70248561524979824689990959946592054517>, String>, EmptyProvider>` is not implemented for `nject::Named<Key<70248561524979824689990959946592054517>, String>`
help: the trait `Injectable<'prov, Service, NjectProvider>` is implemented for `Service`
  --> tests/compile_fail/named_missing_provider.rs:4:1
   |
 4 | #[injectable]
   | ^^^^^^^^^^^^^
note: required for `EmptyProvider` to implement `Provider<'_, nject::Named<Key<70248561524979824689990959946592054517>, String>>`
  --> tests/compile_fail/named_missing_provider.rs:10:1
   |
10 | #[provider]
   | ^^^^^^^^^^^
note: required for `Service` to implement `Injectable<'_, Service, EmptyProvider>`
  --> tests/compile_fail/named_missing_provider.rs:4:1
   |
 4 | #[injectable]
   | ^^^^^^^^^^^^^
   = note: 1 redundant requirement hidden
   = note: required for `EmptyProvider` to implement `Provider<'_, Service>`
note: required by a bound in `EmptyProvider::provide`
  --> tests/compile_fail/named_missing_provider.rs:10:1
   |
10 | #[provider]
   | ^^^^^^^^^^^ required by this bound in `EmptyProvider::provide`
   = note: this error originates in the attribute macro `injectable` which comes from the expansion of the attribute macro `provider` (in Nightly builds, run with -Z macro-backtrace for more info)
